--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
   <div id="container">
     <div class="listening">Listening</div><br>
     <div class="received">Received</div><br>
-    <ion-button (click)="click1()">Click 1</ion-button><br>
+    <ion-button (click)="click1()">Send message to cordova Nodejs</ion-button><br>
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
